<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/formnew_title"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/formnew_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/formnew_gender"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/formnew_gender_m"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rdbFemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/formnew_gender_f"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="18sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/formnew_phone"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/formnew_address"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="18sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/formnew_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="saveNew"
            android:padding="15dp"
            android:text="@string/button_save"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

    </LinearLayout>

    </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>